--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -42,15 +42,15 @@ listing:
 
 ::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
 - A Story of Coffee Chat and Research Hypothesis
-　研究は「**どんな問いを立てるか**」から始まります。PICO/PECO、比較しやすい集団・一般化しやすい集団、アウトカムの選び方...。娘は父に研究の出発点について尋ねます。
+　研究の最初のつまずきは、データではなく問いの立て方にあります。PICO/PECO、比較、一般化―「何を答えたいのか」を一度言葉にしてみます。
 - Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes
-　父は娘に語ります。「呪文のような**R関数**も、データがどの**確率モデル**から生じそうかをイメージできれば整理しやすくなる」これからデータを解析するという方もぜひ。
+　呪文に見えるR関数を、「アウトカムの型」と「それにあった確率モデル」から整理します。何を使うかより、なぜそう見えるか。
 - Outcomes: The Bridge from Data Collection to Analysis
-　オンコロジー領域の研究において、全生存期間（OS）か無増悪生存期間（PFS）かが、常に論争になることをご存知でしょうか。娘は**アウトカムの定義**を確認します。
+　OSかPFSか―オンコロジーで繰り返される論点を手がかりに、アウトカム定義によって研究がどう変わるかを眺めます。
 - A First Step into Survival and Competing Risks Analysis with R
-　生存時間解析の落とし穴は、イベント定義やコーディングにあります。**データ収集の注意点**から**Rを用いた競合リスク解析**のデモまで。
+　生存時間解析は“式”より先に、イベント定義とコーディングで事故が起きます。データ収集の注意点から、競合リスクの入口まで。
 - When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys
-　**バイアス**は研究デザインやデータ収集方法を工夫しないと解消できません。娘は調査で気を付けておくべき点について父に尋ねます。
+　バイアスは解析で帳尻合わせできないことが多い。選択バイアス・情報バイアス・交絡を「どこで混入するか」という視点で点検します。
 :::
 
 このエピソードのRスクリプト一式は、こちらからダウンロードできます。R パッケージや、ここで紹介した解析手順をもう一度たどってみたい方はぜひ。
@@ -70,12 +70,13 @@ listing:
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
 
 ::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+
 - Reading a Paper over a Cup of Coffee
-　はじめて論文を読んだとき、**統計の用語**が意味不明だと思いませんでしたか？同じ気持ちを抱いた娘は父に質問します。
+　はじめて論文を読んだとき、統計の用語が意味不明だと思いませんでしたか？同じ気持ちを抱いた娘は父に質問します。
 - P-Value Explanations That Seem Plausible at First Glance
-　がん臨床試験を題材に「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論的なものの見方**を父は語ります。
+　「繰り返したら数字はどう振る舞う？」という頻度論の視点を、臨床試験の状況で体に落とします。
 - Beyond 0.05: Interpreting P-Values in a Clinical Trial
-　父は娘に語ります。「p値を正しく解釈するにはMethodsを読まなければならない」p値に関するアメリカ統計協会の声明に関するエピソード。
+　p値は「数字」ではなく、Methodsの読み方に接続される。p値について統計家たちがだした声明を扱ったエピソード。
 :::
 
 この回と次のエピソードのRスクリプト一式はこちらから。
@@ -116,17 +117,17 @@ listing:
 
 ::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
 - Silent Confusions Hidden in Percentages
-　疫学の研究結果の多くは、わかりやすくパーセントで報告されますが、それが数字が独り歩きする理由だったとは。**ワクチン有効率**の注意点を父は語ります。
+　疫学の研究結果の多くは、わかりやすくパーセントで報告されますが、それが数字が独り歩きする理由だったとは。言葉の意味を知ることの大切さを父は語ります。
 - Who Is This Percentage About Target Populations and Attributable Fractions
-　数字が独り歩きするのは、計算が理解されていない事だけが理由ではありません。言葉の裏にある**ターゲット集団**の違いについて。
+　数字が独り歩きするのは、計算が理解されていない事だけが理由ではありません。言葉の裏に潜む集団の違いについて。
 - Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R
-　いわゆる調整解析と**Simpsonのパラドックス**の関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。
+　バイアス調整解析とSimpsonのパラドックスの関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。
 - When Odds Ratios Approximate Risk Ratios and When They Fail
-　「オッズ比より**オッズ比の平方根**の方がよい一面もあるんだ」父は疫学の常識を揺さぶります。
+　「オッズ比よりオッズ比の平方根の方がよい一面もあるんだ」父は疫学の常識を揺さぶります。
 - From Risk and Rate to Survival and Hazard
-　「生存曲線やハザード比について納得感が足りないの」**生存時間解析の基礎**を娘は父に学びます。
+　「生存曲線やハザード比について納得感が足りないの」生存時間解析の基礎を娘は父に学びます。
 - Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example
-　リスク比、ハザード比、そして**時間とともに変化する効果**。Rデモを通じて、因果推論に先立って立体的なデータの見方が静かに育ちます。
+　リスク比、ハザード比、そして時間とともに変化する効果。因果推論に先立って立体的なデータの見方が静かに育ちます。
 :::
 
 このエピソードのRスクリプト一式はこちらから。
@@ -144,15 +145,15 @@ listing:
 ::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
 
 - [From Risk to Logistic Regression]
-　「教えられた通り、Rのglm関数で**ロジスティック回帰**をしてみたんだけど、なんだかブラックボックスみたい」父は娘の疑問に答えます。
+　「教えられた通り、Rのglm関数でロジスティック回帰をしてみたんだけど、なんだかブラックボックスみたい」父は娘の疑問に答えます。
 - [Logit: How a Transformation Shapes an Effect]
-　様々な回帰モデルのうちロジスティック回帰を特徴づけるのは**ロジット関数**です。娘は、なぜロジット関数が用いられるのか統計学の秘密を知らされます。
+　ロジスティック回帰を特徴づけるのはロジット関数です。娘は、なぜロジット関数が用いられるのか統計学の秘密を知らされます。
 - [Where My Logistic Regression Went Wrong]
 　結果の見方、表の作り方から、使用上の落とし穴まで、父から統計解析の手ほどきを受けるエピソード。
 - [Why Logistic Regression Fails in Small Samples]
 　「どうして私のロジスティック回帰は発散しちゃったの？」娘は更なる疑問を父にぶつけます。
 - [Simpson's paradox]
-　いわゆるSimpsonのパラドックスと**交絡**の関係は？そしてロジスティック回帰を用いた**調整**という操作に足りない構造とは？
+　いわゆるSimpsonのパラドックスと交絡の関係は？そしてロジスティック回帰を用いた調整という操作に足りない構造とは？
 :::
 
 このエピソードのRスクリプト一式はこちらから。
@@ -174,16 +175,16 @@ listing:
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
 
 ::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
-- [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure]
-　有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子。「もし...だったら？」を統計的に考えるための**因果の言葉**へ父はいざないます。
-- [A Subtle Distinction between Common Causes and Confounders]
-　交絡因子と共通原因は異なる概念だった。現在でも論争の続く交絡因子の正確な定義について、DAGを使って一歩近づきます。
-- [DAGs and Conditional Distributions: Two Languages for the Same Structure]
-　どういう理屈でDAGで交絡因子が特定できるのか？父は、確率に関する必要最小限の数式を使って説明します。
-- [A Circle, an Equation, and a Cylinder]
-　DAGと確率モデルとRubin因果モデルっていったいなに？娘の疑問への答え。
-- [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
-　わかるようでわからない**ブロック**という操作の正式な解説。
+- Three-Variable DAGs: The Smallest Building Blocks of Causal Structure
+　DAG、共通原因、合流点、中間因子―因果の語彙を、いちばん小さな図から覚えます。「もし...だったら？」を描くために。
+- A Subtle Distinction between Common Causes and Confounders
+　「交絡因子」は言葉として便利すぎる。共通原因と交絡のズレを、図で丁寧に区別します。
+- DAGs and Conditional Distributions: Two Languages for the Same Structure
+　図は直感、式は精密。DAGと条件付き確率が、同じものを別の言語で言っている感覚をつかみます。
+- A Circle, an Equation, and a Cylinder
+　確率モデルとDAGとRubin因果モデルっていったいなに？娘の疑問への答え。
+- Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias
+　「ブロックする」とは、どのような操作をDAGに加えることなのか。バイアスの源を探す手触りを、最小限の形式で確かめます。
 :::
 
 ### 9. Publish a Paper — 研究のその先
