--- a/jp/publish-a-paper-4.qmd
+++ b/jp/publish-a-paper-4.qmd
@@ -156,27 +156,49 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-梅雨の雨音は夜の静けさをなぐさめてくれる。診療の後、私たちはパソコンに向かう時間をとることが多い。今夜も私はモニターに映る原稿を眺めていた。机の上には、論文と調査票、そして紙ナプキンに書かれたメモの傍にルービックキューブがそっと置かれている。冷めかけたコーヒーに手を伸ばした。
+梅雨の雨音は、夜の静けさをなぐさめてくれる。診療の後、私たちはパソコンに向かう時間をとることが多い。今夜も私は、モニターに映る原稿を眺めていた。 
 
-書いては止まり、止まってはまた戻る。
+机の上には、論文と調査票が無造作に散らばっている。 紙ナプキンに書かれたメモのそばに、ルービックキューブがそっと置かれている。冷めかけたコーヒーに手を伸ばした。
+
+書いては止まり、 止まっては、また戻る。
+:::
+
+「背景」
+
+::: voice-daughter
+論文の冒頭に置かれるこのセクションでは、多くの論文が著者名とともに引用される。それはきっと私と同じ空間で書かれたものだ。
 :::
 
 「本研究の目的は―」
 
 ::: voice-daughter
-こんなに短い一文に、こんなにも多くの意味が乗ってしまうことを、今の私は知っている。目的は、個人のものじゃない。研究仮説というフォーマットで、普遍的に共有できるように開かれていなければならない。それは私がどの地点から世界を眺め、どんな方向へ歩こうとしているのかを、そっと誰かに手渡すような行為だ。
+こんなに短い一文に、こんなにも多くの意味が乗ることを、今の私は知っている。 
 
-次に目が留まる。
+目的は、個人のものじゃない。研究仮説というフォーマットで、普遍的に共有できるように開かれていなければならない。それは私がどの地点から世界を眺め、どんな方向へ歩こうとしているのかを、そっと誰かに手渡すような行為だ。
+
+次に目が留まる。 
 :::
 
-「本研究の主な結果は―」
+「方法」 
 
 ::: voice-daughter
-そこに置かれた数字も、以前とは違って見える。数字は患者さんになにが起きたか。そして、世界への問いかけへの返事なんだ。私たちはよい診療をしてきたの？問い方が変われば、返ってくる数字も変わる。数字はただ並んでいるだけに見えて、実はたくさんのことを語っている。
+一番時間が掛かった節だ。自分がこれまで行ってきたことを文章にすればいいだけなのに、知らない誰かに、一から正しく伝えることは難しい。当然と思って見落としていたことを補わなければならない。共有され、一意に決まる言葉を選ぶ必要もある。
 
-患者さんを対象にした研究だからこそ、研究仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより「よりよい技術に近づくための知識を得る」という態度に近い。仕事をしている時間や、コーヒーを飲んで人と話しているときには通り過ぎてしまうけれど、ひとりになるとそれがよくわかる。
+書いては直し、読み返しては直す。この時間を、私はきらいではない。
+:::
 
-コーヒーは机の端で静かに冷えていた。モニターには、書き上げたばかりのConclusionが映る。調査をデザインしたときに抱いていた疑問に答えられているか、ひとつひとつ確かめる。私は軽く頷き、ゆっくりとキーボードを叩いた。
+「本研究の主な結果は―」 
+
+::: voice-daughter
+そこに置かれた数字も、以前とは違って見えた。数字は、患者さんに何が起きたかを記録したもの。同時に、世界への問いかけに返ってきた答えでもある。 
+
+私たちは、よい診療をしてきたのだろうか。 問い方が変われば、返ってくる数字も変わる。 並んでいるだけに見える数字は、実は多くを語っている。そのことを今では知っている。患者さんを対象にした研究だからこそ、仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより、「よりよい技術に近づくための知識を得る」という態度に近い。
+
+たくさんのことが、仕事をしているときや、コーヒーを飲みながら人と話しているときには、通り過ぎてしまう。ひとりになると、それがよくわかる
+
+コーヒーは机の端で、静かに冷えていた。モニターには、書き上げたばかりのConclusionが映っている。調査をデザインしたときに抱いていた疑問に、答えられているか。ひとつひとつ確かめる。 
+
+私は軽く頷き、 ゆっくりとキーボードを叩いた。
 :::
 :::::::::::::::::::::::::::::::::
 
