--- a/en/study-design-2.qmd
+++ b/en/study-design-2.qmd
@@ -306,9 +306,8 @@ According to the review by Kim and Prasad (2016), 31 out of 83 products were rep
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
-- [Outcomes: The Bridge from Data Collection to Analysis]
-- [A First Step into Survival and Competing Risks Analysis with R]
-- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
+- [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
+- [A First Step into Survival and Competing Risks Analysis with R](study-design-4.html)
+- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys](study-design-5.html)
 - [Statistical Terms in Plain Language](glossary.html)
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
-
