--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -37,14 +37,14 @@ listing:
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
 - [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
-- [A First Step into Survival and Competing Risks Analysis with R]　【12/15公開予定】
-- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]　【12/15公開予定】
+- [A First Step into Survival and Competing Risks Analysis with R](study-design-4.html)
+- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys](study-design-5.html)
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **A Story of Coffee Chat and Research Hypothesis**
 　研究の最初のつまずきは、データではなく問いの立て方にあります。PICO/PECO、比較、一般化―「何を答えたいのか」を一度言葉にしてみます。
 - **Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes**
-　呪文に見えるR関数を、「アウトカムの型」と「それにあった確率モデル」から整理します。何を使うかより、なぜそう見えるか。
+　呪文に見えるR関数を「アウトカムの型」と「それにあった確率モデル」から整理します。
 - **Outcomes: The Bridge from Data Collection to Analysis**
 　OSかPFSか―オンコロジーで繰り返される論点を手がかりに、アウトカム定義によって研究がどう変わるかを眺めます。
 - **A First Step into Survival and Competing Risks Analysis with R**
@@ -69,7 +69,7 @@ listing:
 - [P-Value Explanations That Seem Plausible at First Glance]
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **Reading a Paper over a Cup of Coffee**
 　はじめて論文を読んだとき、統計の用語が意味不明だと思いませんでしたか？同じ気持ちを抱いた娘は父に質問します。
 - **P-Value Explanations That Seem Plausible at First Glance**
@@ -90,7 +90,7 @@ listing:
 - [Understanding Confidence Intervals via Hypothetical Replications in R]
 - [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **R Demonstration of Bias in Kaplan-Meier Under Competing Risks**
 　頻度論が導く法則は、ただの抽象ではなくシミュレーションで確認することができます。Rに不慣れな方も、スクリプトを流すだけですので結果を再現してみてください。
 - **Understanding Confidence Intervals via Hypothetical Replications in R**
@@ -114,7 +114,7 @@ listing:
 - [From Risk and Rate to Survival and Hazard]
 - [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example]
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **Silent Confusions Hidden in Percentages**
 　疫学の研究結果の多くは、わかりやすくパーセントで報告されますが、それが数字が独り歩きする理由だったとは。言葉の意味を知ることの大切さを父は語ります。
 - **Who Is This Percentage About Target Populations and Attributable Fractions**
@@ -143,7 +143,7 @@ listing:
 - [Why Logistic Regression Fails in Small Samples]
 - [Simpson's paradox]
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **From Risk to Logistic Regression**
 　「教えられた通り、Rのglm関数でロジスティック回帰をしてみたんだけど、なんだかブラックボックスみたい」父は娘の疑問に答えます。
 - **Logit: How a Transformation Shapes an Effect**
@@ -174,7 +174,7 @@ listing:
 - [A Circle, an Equation, and a Cylinder]
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
 
-::: {.callout-note appearance="simple" collapse="true" title="内容が知りたい方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="あらすじ"}
 - **Three-Variable DAGs: The Smallest Building Blocks of Causal Structure**
 　DAG、共通原因、合流点、中間因子―因果の語彙を、いちばん小さな図から覚えます。「もし...だったら？」を描くために。
 - **A Subtle Distinction between Common Causes and Confounders**
