--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -371,6 +371,6 @@ CDISC ADaM ADTTEでは、1がTRUEを表しています。`Event()`や`Surv()`な
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
 - [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
 - [A First Step into Survival and Competing Risks Analysis with R](study-design-4.html)
-- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
+- [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys](study-design-5.html)
 - [Statistical Terms in Plain Language](glossary.html)
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
